--- a/MP1.Rmd
+++ b/MP1.Rmd
@@ -29,6 +29,6 @@ r <- cor(NumMDs, NumHospitals)
 
 r
 ```
-r value indicates there is a      linear correlation between the number of doctors in a city and the number of hospitals in a city.
+The r value  of 0.9084686 indicates there is a strong positive linear correlation between the number of doctors in a city and the number of hospitals in a city.
 
-__Based on the scatter plot and the r value, fitting a linear relationship is (IS OR IS NOT??????) reasonable.__
+__Based on the scatter plot and the r value, fitting a linear relationship is reasonable.__
